[package]
name = "specs-mirror"
description = "A storage for use with specs to help synchronize with an external library."
version = "0.4.1"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/specs-mirror"
documentation = "https://docs.rs/specs-mirror"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
hibitset = "0.5.0"
specs = "0.11.2"
shrev = "1.0.1"

[dev-dependencies]
cassowary = "0.3.0"